Update and rename webshop.html to index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     
                         <nav>
                             <ul>
-                                <li><a href="webshop.html">ℍ𝕠𝕞𝕖</a></li>
+                                <li><a href="index.html">ℍ𝕠𝕞𝕖</a></li>
                                 <li><a href="merken.html">𝕄𝕖𝕣𝕜𝕖𝕟</a></li>
                                 <li><a href="contact.html">ℂ𝕠𝕟𝕥𝕒𝕔𝕥</a></li>
                                 <li><a href="about.html">𝕂𝕝𝕒𝕟𝕥𝕖𝕟𝕤𝕖𝕣𝕧𝕚𝕔𝕖</a></li>
